<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/openMediaPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openMediaPlayerButton" />

    <Button
        android:id="@+id/openTwitterFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openTwitterFeedButton" />

    <Button
        android:id="@+id/openJabberChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openJabberChatButton" />

</LinearLayout>